{
    "name": "InputController",
    "maps": [
        {
            "name": "Gameplay",
            "id": "92299d42-e3ca-478f-97be-1b655a8710f7",
            "actions": [
                {
                    "name": "MovementLeft",
                    "type": "Button",
                    "id": "ab25b04d-58c6-4595-90f6-6dd353b3b3a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.15)",
                    "initialStateCheck": true
                },
                {
                    "name": "MovementRight",
                    "type": "Button",
                    "id": "260b1ba4-15d9-4e8a-a83e-3ddcb7718bb4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.15)",
                    "initialStateCheck": true
                },
                {
                    "name": "MovementDown",
                    "type": "Button",
                    "id": "0ca74d21-cc82-4c5e-9a5d-8603afec7b55",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.15)",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "c04ae8c6-3339-4b19-995d-b0482be1b6fb",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "7f0749e0-f692-4fc1-a5a6-7c04da8e430d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "88019ab3-082f-4a5e-9812-79592710f400",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "5a3995bd-e505-4720-94f7-4263e2081c0d",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "de32d15a-5c76-489d-ab19-c087af766b7d",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "dd43827b-9c30-4ee5-a2d4-a8c035df9ddb",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "MovementRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d9e1a7d3-5c19-41f7-9d0b-307005258eed",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "MovementDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed467124-2149-4d97-8902-e460717f9dbe",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "MovementLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}